ingress-egress/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: thomaspoignant/hello-world-rest-json
        name: api
        ports: 
        - containerPort: 8080
