ingress-egress/api-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-np
spec:
  podSelector:
    matchLabels:
      app: api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: "nginx"
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: "db"
